k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: goquizvibe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: goquizvibe:latest
          ports:
            - containerPort: 443
          livenessProbe:
            httpGet:
              path: /
              port: 443
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 443
            initialDelaySeconds: 5
            periodSeconds: 5
