k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: goquizvibe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:8.6.3-alpine
          ports:
            - containerPort: 6379
          command: ["redis-server", "--save", "60", "1", "--loglevel", "warning", "--requirepass", "$(REDIS_PASSWORD)", "--notify-keyspace-events", "Ex"]
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
