k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: goquizvibe
spec:
  selector:
    app: backend
  ports:
    - port: 443
      targetPort: 443
  clusterIP: None
